partial fix for message content overflowing

--- a/src/client/css/nodeworld.css
+++ b/src/client/css/nodeworld.css
@@ -77,16 +77,22 @@ button.node-form-input {
     padding: 2px 8px;
 }
 
-.node-message .node-message-timestamp, .node-message .node-message-author {
-    flex-shrink: 1;
-}
-
 .hidden {
     visibility: hidden;
 }
 
+.node-message {
+    display: flex;
+}
+
+.node-message .node-message-author, .node-message .node-message-timestamp {
+    flex-shrink: 0;
+}
+
 .node-message .node-message-content {
+    overflow-wrap: break-word;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .node-message .node-message-timestamp {
